test/scc/ext/tm/semantic-errors/019.a
019.t:4:36: error: initialization from incompatible pointer types